# 2048Game

./: CMakeLists.txt  README.md  README.txt  board.h  glad.c  main.cpp
lib/glfw-3.2.1/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.2.1/src/: Makefile  cmake_install.cmake
resources/: board.paint
src/: board.h  main.cpp
